# manage-asset-app

./: .gitignore  ARCHITECTURE.md  README.md  package-lock.json  package.json  project-context.md  vercel.json  write_app.py
python-service/: bulk_tagger.py  component_classifier.py  confidence_scorer.py  description_generator.py  design_language.py  design_tokens.py  duplicate_detector.py  embedder.py  fig_extractor.py  index_manager.py  intent_parser.py  layout_analyzer.py  main.py  main.spec  ocr.py  palette_search.py  query_expander.py  query_rewriter.py  ranker.py  requirements.txt  schema.py  setup.sh  sidecar_handlers.py  style_classifier.py  tagger.py  version_detector.py
scripts/: Dockerfile.linux  build-linux-docker.sh  build-local.sh  build-sidecar.ps1  build-sidecar.sh  keygen.sh  upload-release.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.release.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: PLACEHOLDER.txt
src-tauri/src/: commands.rs  db.rs  errors.rs  export.rs  file_types.rs  folder_intel.rs  hasher.rs  ignore.rs  lib.rs  logging.rs  models.rs  recovery.rs  relation_graph.rs  scanner.rs  search.rs  sidecar.rs  state.rs  thumbnail.rs  watcher.rs
src-tauri/src/commands/: assets.rs  design.rs  duplicates.rs  export.rs  fig.rs  file_ops.rs  folder_intel.rs  intelligence.rs  mod.rs  ocr.rs  production.rs  recovery.rs  relations.rs  search.rs  semantic.rs  sidecar_mgmt.rs  tags.rs  thumbnails.rs
src/components/: Sidebar.tsx  (+15 more)
website/: .gitignore  next.config.ts  package-lock.json  package.json
(+94 files in other folders)
