[package]
name = "manage-asset-app"
version = "0.1.0"
description = "Local-first design asset management desktop app"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.39.0", features = ["bundled"] }
walkdir = "2.5.0"
notify = "8.2.0"
image = "0.25.9"
chrono = { version = "0.4.44", features = ["serde"] }
fuzzy-matcher = "0.3.7"
tokio = { version = "1.44", features = ["full"] }
uuid = { version = "1.22.0", features = ["v4"] }
hex = "0.4.3"
sha2 = "0.10.9"
base64 = "0.22.1"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-updater = "2"
crossbeam-channel = "0.5"
resvg = "0.47.0"
rayon = "1.11.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

